source/sass/views/dear-internet.scss
#view-dear-internet {
  $breakpoint: $bp-md;

  background-image: linear-gradient(
    180deg,
    $dear-internet-lilac 0%,
    $dear-internet-pink 100%
  );

  @mixin dear-internet-body-large {
    @extend .body-large;
    @include set-text-size(18px, 27px, 24px, 34px);
  }

  h1 {
    background: $light-red;

    @include set-text-size(36px, 40px, 112px, 112px);
  }

  h1,
  h2 {
    color: $dark-blue;
    font-style: italic;
  }

  main {
    position: relative;
  }

  .full-size-absolute-wrapper {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }

  .plane-pathway-wrapper {
    --approx-cta-height: 1200px;

    background-image: url(../_images/dear-internet/Plane+Path-2.svg);
    background-repeat: no-repeat;
    background-position: center 2rem;
    background-size: auto 100%;
    height: calc(100% - var(--approx-cta-height));
  }

  .cloud-container {
    --position-scaler: 15px;
    $animation-duration: 5;

    animation-name: float-right;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
    position: absolute;

    @media (min-width: $breakpoint) {
      --position-scaler: 20px;
    }

    @for $i from 1 through 6 {
      &:nth-child(#{$i}) {
        animation-duration: #{random($animation-duration) + 15}s;

        @if random() > 0.5 {
          animation-name: float-left;
        }
      }
    }

    svg.cloud {
      --width: 140px;

      width: var(--width);

      @media (min-width: $breakpoint) {
        --width: 200px;
      }

      &.blue path {
        fill: $blue;
      }

      &.light-blue path {
        fill: $light-blue;
      }

      &.white path {
        fill: $white;
      }

      &.light-red path {
        fill: $light-red;
      }
    }
  }

  @keyframes float-left {
    0% {
      transform: translatey(0);
    }
    50% {
      transform: translateY(20px) translateX(-25px);
    }
    100% {
      transform: translatey(0);
    }
  }

  @keyframes float-right {
    0% {
      transform: translatey(0);
    }
    50% {
      transform: translateY(-35px) translateX(15px);
    }
    100% {
      transform: translatey(0);
    }
  }

  .clouds-wrapper {
    overflow-x: hidden; // to prevent clouds from going outside of viewport

    .cloud-container {
      &:nth-child(1) {
        top: calc(2.5 * var(--position-scaler));
        left: 5%;

        svg.cloud {
          transform: scale(0.7) scaleX(-1);
        }
      }

      &:nth-child(2) {
        top: calc(20 * var(--position-scaler));
        left: 55%;

        svg.cloud {
          transform: scale(2);
        }
      }

      &:nth-child(3) {
        top: calc(12 * var(--position-scaler));
        left: -2%;

        svg.cloud {
          transform: scale(1.2) scaleX(-1);
        }
      }

      &:nth-child(4) {
        left: 90%;
      }

      &:nth-child(5) {
        top: calc(29 * var(--position-scaler));
        left: 82%;
        transform: scale(1.1) scaleX(-1);
      }

      &:nth-child(6) {
        top: calc(35 * var(--position-scaler));
        left: 18%;
      }
    }
  }

  .love-letter-stamp {
    --base-z-index: 1;

    overflow-x: hidden; // to prevent clouds from going outside of viewport
    margin: 2.5rem 0;
    position: relative;

    @media (min-width: $breakpoint) {
      margin: 5rem 0;
    }

    img {
      --width: 80px;

      width: var(--width);
      z-index: calc(var(--base-z-index) + 1);

      @media (min-width: $breakpoint) {
        --width: 128px;
      }
    }

    .cloud-container {
      z-index: var(--base-z-index);

      &:nth-of-type(1) {
        left: 13%;
        top: calc(5 * var(--position-scaler));
      }

      &:nth-of-type(2) {
        left: 77%;
        top: calc(0.5 * var(--position-scaler));

        svg.cloud {
          transform: scale(1.4) scaleX(-1);
        }
      }
    }
  }

  .intro-text {
    p {
      @include dear-internet-body-large();

      color: $gray-80;
    }
    margin-bottom: 100px;

    @media (min-width: $breakpoint) {
      margin-bottom: 210px;
    }
  }

  .sticky-side {
    position: sticky;
    top: 140px;

    .share-button-group {
      transition: opacity 0.2s ease-in-out;
      opacity: 1;

      &.faded {
        opacity: 0;
      }
    }
  }

  .sticky-side {
    margin-top: -32px;

    @include style-colored-share-buttons(
      $dark-blue,
      "../_images/dear-internet/facebook-share.svg",
      "../_images/dear-internet/twitter-share.svg",
      "../_images/dear-internet/email-share.svg",
      "../_images/dear-internet/link-share.svg",
      "../_images/dear-internet/link-share-copied.svg"
    );
  }

  .letters {
    @media (min-width: $breakpoint) {
      background-image: url(../_images/dear-internet/Envelope-Left-Group-Extended.svg),
        url(../_images/dear-internet/Envelope-Right-Group-Extended.svg);
      background-repeat: no-repeat;
      background-position: 5% top, 95% top;
    }
  }

  .letters-section-heading {
    padding: 3rem 0 6rem 0;
    margin-bottom: 2rem;
    background-image: url(../_images/dear-internet/Pixel-Heart-Large.svg);
    background-repeat: no-repeat;
    background-position: center top;
    background-size: 130px auto;

    @media (min-width: $breakpoint) {
      padding: 3rem 0 10rem 0;
      background-size: 244px auto;
    }
  }

  .cta {
    --padding-y: 125px;
    --envelope-top-offset: calc(var(--padding-y) / 2.5);
    --envelope-width: 75px;

    padding: calc(var(--padding-y) * 2) 0 var(--padding-y) 0;
    background-image: url(../_images/dear-internet/Donate-Area-Graphic.svg),
      url(../_images/dear-internet/Envelope-Blue1.svg),
      url(../_images/dear-internet/Envelope-Blue2.svg),
      url(../_images/dear-internet/Envelope-Red1.svg);
    background-position: center center,
      calc(var(--envelope-width) / -2.5) var(--envelope-top-offset),
      center var(--envelope-top-offset),
      calc(100% + var(--envelope-width) / 2.5) var(--envelope-top-offset);
    background-repeat: no-repeat;
    background-size: 200vw auto, var(--envelope-width) auto,
      var(--envelope-width) auto, var(--envelope-width) auto;

    @media (min-width: $breakpoint) {
      --padding-y: 250px;
      background-size: contain;
      background-image: url(../_images/dear-internet/Donate-Area-Graphic.svg);
    }

    p {
      @include dear-internet-body-large();
    }

    a.btn.btn-secondary.heart-glyph {
      border-color: $dark-blue;
      color: $dark-blue;

      @include hover-focus-active {
        background-color: $dark-blue;
        color: $white;

        &:before {
          filter: brightness(0) invert(100%);
        }
      }

      &:before {
        background-image: url(../_images/dear-internet/heart-dark-blue.svg);
      }
    }
  }

  .globe-wrapper {
    --img-size: 180px;

    position: relative;
    overflow: hidden;
    height: calc(var(--img-size) / 2);

    @media (min-width: $breakpoint) {
      --img-size: 725px;
      margin-top: -120px;
    }

    img {
      position: absolute;
      width: var(--img-size);

      &:nth-child(1) {
        left: calc(var(--img-size) / 2 * -1);
      }

      &:nth-child(2) {
        right: calc(var(--img-size) / 2 * -1);
      }
    }
  }
}

